syntax = "proto3";

option java_multiple_files = true;

package io.trinitylake.models;

message LakeHouseDef {
  string name = 1;
  uint32 major_version = 2;
  optional uint32 order = 3;
  optional uint32 namespace_name_max_size_bytes = 4;
  optional uint32 table_name_max_size_bytes = 5;
  optional uint32 file_name_max_size_bytes = 6;
  optional uint64 node_file_max_size_bytes = 7;
  map<string, string> properties = 8;
  optional uint64 maximum_version_age_millis = 9;
  optional uint32 minimum_versions_to_keep = 10;
  map<uint64, uint64> maximum_version_age_millis_overrides = 11;
  map<string, string> exported_snapshots = 12;
}